LPS-75470 Build Lang

--- a/dynamic-data-mapping-web/src/main/resources/content/Language_ar.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_ar.properties
@@ -33,6 +33,7 @@ new-structure=أضف هيكل
 only-allow-deleting-required-fields-in-edit-mode=السماح بحذف الحقول المطلوبة في وضع التحرير فقط.
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=الرجاء إدخال إسم شارع صحيح.
+please-enter-only-alphanumeric-characters-or-underscore=الرجاء إدخال الأحرف الأبجدية الرقمية أو تسطير أسفل السطر فقط. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=يرجى إدخال أسماء فريدة لحقول الهيكل (بما في ذلك أسماء الحقول الموروثة من الهيكل الأصل).
 save-and-continue=الحفظ والمتابعة
 script-file=ملف البرنامج النصي (Automatic Translation)
