--- a/dynamic-data-mapping-web/src/main/resources/content/Language_bg.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_bg.properties
@@ -33,6 +33,7 @@ new-structure=Добавяне на структура
 only-allow-deleting-required-fields-in-edit-mode=Само позволи изтриването на задължителните полета в режим на редактиране. (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Моля, въведете валидна улица.
+please-enter-only-alphanumeric-characters-or-underscore=Моля въведете само буквено-цифрени знаци или долна черта. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Моля, въведете уникална структура имена на полета (включително имената на полетата, наследени от родителския структура). (Automatic Translation)
 save-and-continue=Запазете и продължете
 script-file=Скрипт файл (Automatic Translation)
