--- a/dynamic-data-mapping-web/src/main/resources/content/Language_ca.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_ca.properties
@@ -33,6 +33,7 @@ new-structure=Estructura nova
 only-allow-deleting-required-fields-in-edit-mode=Permet que només es puguin eliminar els camps requerits en mode d'edició.
 parent-x={0} principal
 please-enter-a-valid-script=Introduïu un script vàlid.
+please-enter-only-alphanumeric-characters-or-underscore=Si us plau introduïu només caràcters alfanumèrics o subratllat. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Introduïu noms de camps d'estructura únics (incloent-hi els noms heretats de l'estructura principal).
 save-and-continue=Desa i continua
 script-file=Fitxer script
