--- a/dynamic-data-mapping-web/src/main/resources/content/Language_cs.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_cs.properties
@@ -33,6 +33,7 @@ new-structure=Nová struktura
 only-allow-deleting-required-fields-in-edit-mode=Povolit mazání povinných polí pouze v režimu úprav.
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Zadejte, prosím, platný skript.
+please-enter-only-alphanumeric-characters-or-underscore=Prosím, zadejte pouze alfanumerické znaky nebo podtržítko. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Názvy polí musí být v rámci struktury unikátní (mějte na paměti pole z nadřazené struktury).
 save-and-continue=Uložit a pokračovat
 script-file=Soubor se skriptem
