--- a/dynamic-data-mapping-web/src/main/resources/content/Language_el.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_el.properties
@@ -33,6 +33,7 @@ new-structure=Νέα δομή
 only-allow-deleting-required-fields-in-edit-mode=Να επιτραπεί η διαγραφή απαραίτητων πεδίων μόνο σε edit mode.
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Παρακαλώ δώστε ένα έγκυρο script.
+please-enter-only-alphanumeric-characters-or-underscore=Πληκτρολογήστε μόνο αλφαριθμητικούς χαρακτήρες ή υπογράμμισης. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Παρακαλώ δώστε μοναδικά ονόματα στα πεδία της δομής (συμπεριλαμβανομένων και των ονομάτων που κληρονομούνται από την μητρική δομή).
 save-and-continue=Αποθήκευση και συνέχεια
 script-file=Κρυπτογραφημένο αρχείο δέσμης ενεργειών (Automatic Translation)
