--- a/dynamic-data-mapping-web/src/main/resources/content/Language_eu.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_eu.properties
@@ -33,6 +33,7 @@ new-structure=Egitura berria
 only-allow-deleting-required-fields-in-edit-mode=Derrigorrezko eremuak editatze moduan soilik ezabatzea onartu.
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Mesedez, sartu baliozko script bat.
+please-enter-only-alphanumeric-characters-or-underscore=Please enter only alphanumeric characters or underscore. (Automatic Copy)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Mesedez, sartu egiturako eremuentzat izen bakarrak (estruktura nagusitik heredatutako eremuen izenak barne).
 save-and-continue=Gorde eta jarraitu
 script-file=Script File (Automatic Copy)
