--- a/dynamic-data-mapping-web/src/main/resources/content/Language_fa.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_fa.properties
@@ -33,6 +33,7 @@ new-structure=افزودن ساختار
 only-allow-deleting-required-fields-in-edit-mode=تنها مجاز به حذف فایل‌های درخواستی در حالت ویرایش هستید.
 parent-x=والد {0}
 please-enter-a-valid-script=لطفا یک نام اسکریپت مجاز وارد کنید.
+please-enter-only-alphanumeric-characters-or-underscore=لطفا فقط کافی یا زیرخط را وارد کنید. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=لطفا یک نام منحصر به فرد برای فیلد ساختار وارد کنید (که شامل نام فیلدهایی باشد که از ساختار والد گرفته شده باشد).
 save-and-continue=ذخیره و ادامه
 script-file=فایل اسکریپت
