--- a/dynamic-data-mapping-web/src/main/resources/content/Language_fi.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_fi.properties
@@ -33,6 +33,7 @@ new-structure=Lisää rakenne
 only-allow-deleting-required-fields-in-edit-mode=Vain muokkaustilassa on mahdollista poistaa vaaditut kentät.
 parent-x=Isäntä {0}
 please-enter-a-valid-script=Syötä kelvollinen katu.
+please-enter-only-alphanumeric-characters-or-underscore=Please enter only alphanumeric characters or underscore. (Automatic Copy)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Syötä yksilölliset rakenteen kenttien nimet (mukaan lukien nimet jotka on peritty isäntä rakenteesta).
 save-and-continue=Tallenna ja jatka
 script-file=Skripti-tiedosto
