--- a/dynamic-data-mapping-web/src/main/resources/content/Language_fr.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_fr.properties
@@ -33,6 +33,7 @@ new-structure=Nouvelle structure
 only-allow-deleting-required-fields-in-edit-mode=Autoriser seulement la suppression des champs requis en mode édition.
 parent-x={0} supérieur
 please-enter-a-valid-script=Veuillez entrer un script valide svp.
+please-enter-only-alphanumeric-characters-or-underscore=Veuillez saisir uniquement des caractères alphanumériques ou trait de soulignement. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Veuillez entrer des noms de champs de structure unique (incluant les noms de champs hérités de la structure parente).
 save-and-continue=Sauvegarder et continuer
 script-file=Fichier de script
