--- a/dynamic-data-mapping-web/src/main/resources/content/Language_gl.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_gl.properties
@@ -33,6 +33,7 @@ new-structure=Nova estrutura
 only-allow-deleting-required-fields-in-edit-mode=Only allow deleting required fields in edit mode. (Automatic Copy)
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Por favor utiliza un script válido.
+please-enter-only-alphanumeric-characters-or-underscore=Please enter only alphanumeric characters or underscore. (Automatic Copy)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Por favor, introduce unha única estrutura de nomes de campo (incluíndo nomes de campo herdados de estruturas pai).
 save-and-continue=Gardar e continuar
 script-file=Script File (Automatic Copy)
