--- a/dynamic-data-mapping-web/src/main/resources/content/Language_hi_IN.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_hi_IN.properties
@@ -33,6 +33,7 @@ new-structure=लेख का नया निर्माण बनाएँ
 only-allow-deleting-required-fields-in-edit-mode=केवल संपादन मोड में आवश्यक फ़ील्ड को हटाने की अनुमति दें। (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=कृपया एक ठीक मुहल्ला दर्ज करे.
+please-enter-only-alphanumeric-characters-or-underscore=कृपया केवल अल्फ़ांयूमेरिक वर्ण या अंडरस्कोर दर्ज करें । (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=(मूल संरचना से इनहेरिट की गई फ़ील्ड नामों सहित) अद्वितीय संरचना फ़ील्ड नाम दर्ज करें। (Automatic Translation)
 save-and-continue=सेव और Continue
 script-file=स्क्रिप्ट फ़ाइल (Automatic Translation)
