--- a/dynamic-data-mapping-web/src/main/resources/content/Language_hr.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_hr.properties
@@ -33,6 +33,7 @@ new-structure=Nova struktura
 only-allow-deleting-required-fields-in-edit-mode=Brisanje obveznih polja dozvoli samo u modu uređivanja.
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Molimo unesite valjanu skriptu.
+please-enter-only-alphanumeric-characters-or-underscore=Please enter only alphanumeric characters or underscore. (Automatic Copy)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Molimo unesite jedinstvene nazive strukturu polja (uključujući nazive polja naslijeđene od nadređenog strukture).
 save-and-continue=Spremi i nastavi
 script-file=Script File (Automatic Copy)
