--- a/dynamic-data-mapping-web/src/main/resources/content/Language_iw.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_iw.properties
@@ -33,6 +33,7 @@ new-structure=מבנה חדש
 only-allow-deleting-required-fields-in-edit-mode=אפשר מחיקה של שדות נחוצים רק במצב עריכה.
 parent-x=הורה {0}
 please-enter-a-valid-script=אנא הכנס כתב תקף.
+please-enter-only-alphanumeric-characters-or-underscore=הזינו בבקשה תווים אלפא-נומריים או מקף תחתון בלבד. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=אנא הכנס שמות שדות מבנה ייחודיים (כולל שמות שדות שעברו בירושה ממבנה האב).
 save-and-continue=שמור והמשך
 script-file=קובץ סקריפט
