--- a/dynamic-data-mapping-web/src/main/resources/content/Language_ja.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_ja.properties
@@ -33,6 +33,7 @@ new-structure=新しいストラクチャー
 only-allow-deleting-required-fields-in-edit-mode=編集モードで必須フィルドのみを削除することを可能にする。
 parent-x=親 {0}
 please-enter-a-valid-script=有効なスクリプトを正しく入力してください。
+please-enter-only-alphanumeric-characters-or-underscore=Please enter only alphanumeric characters or underscore. (Automatic Copy)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=一意となるストラクチャーのフィールド名を入力してください。(親ストラクチャーから継承したフィールド名を含みます)
 save-and-continue=保存して続ける
 script-file=スクリプトファイル
