--- a/dynamic-data-mapping-web/src/main/resources/content/Language_lo.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_lo.properties
@@ -33,6 +33,7 @@ new-structure=ໂຄງສ້າງໃໝ່
 only-allow-deleting-required-fields-in-edit-mode=ອະນຸຍາດໃຫ້ພຽງການລຶບລາງຟິວທີ່ຕ້ອງການເທົ່ານັ້ນໃນຮູບແບບຂອງການແກ້ໄຂ
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=ກະລຸນາປ້ອນສະກິບທີ່ເໝາະສົມ
+please-enter-only-alphanumeric-characters-or-underscore=Please enter only alphanumeric characters or underscore. (Automatic Copy)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=ກະລຸນາປ້ອນຊື່ຟິວໂຄງສ້າງທີ່ເປັນໜື່ງດຽວ(ເຊິງປະກອບດ້ວຍຊື່ຟິວທີ່ສຶບທອດຈາກໂຄງສ້າງເຄົ້າ)
 save-and-continue=ຈັດ​ເກັບ ​ແລະ​ສື​ບຕໍ່​
 script-file=Script File (Automatic Copy)
