--- a/dynamic-data-mapping-web/src/main/resources/content/Language_lt.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_lt.properties
@@ -33,6 +33,7 @@ new-structure=Nauja struktūra (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=Leisti tik panaikinus privalomus laukus į redagavimo režimą. (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Prašome įvesti galiojantį scenarijų. (Automatic Translation)
+please-enter-only-alphanumeric-characters-or-underscore=Prašome įvesti tik raidiniai ir skaitiniai simboliai ar pabrėžti. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Prašome įvesti unikalią struktūrą laukų pavadinimai (įskaitant laukų pavadinimus, paveldėtas iš tėvų struktūra). (Automatic Translation)
 save-and-continue=Išsaugoti ir tęsti (Automatic Translation)
 script-file=Scenarijaus failas (Automatic Translation)
