--- a/dynamic-data-mapping-web/src/main/resources/content/Language_nb.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_nb.properties
@@ -33,6 +33,7 @@ new-structure=Ny struktur
 only-allow-deleting-required-fields-in-edit-mode=Tillat bare sletting av påkrevde felt i redigeringsmodus.
 parent-x=Overordnet {0}
 please-enter-a-valid-script=Vennligst angi et gyldig skript.
+please-enter-only-alphanumeric-characters-or-underscore=Angi bare alfanumeriske tegn eller understrekingstegn. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Vennligst angi unike strukturfeltnavn (inkludert feltnavn som er arvet fra overordnet struktur).
 save-and-continue=Lagre og fortsett
 script-file=Skript-fil
