--- a/dynamic-data-mapping-web/src/main/resources/content/Language_ro.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_ro.properties
@@ -33,6 +33,7 @@ new-structure=Structura Noua
 only-allow-deleting-required-fields-in-edit-mode=Numai permite ştergerea câmpurile obligatorii în modul de editare. (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Te rog introdu o strada valida.
+please-enter-only-alphanumeric-characters-or-underscore=Vă rugăm să introduceţi numai caractere alfanumerice sau subliniere. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Te rog introdu numele de capuri a structurii (include numele de campuri mostenite de la structura parinte)
 save-and-continue=Salveaza si Continua
 script-file=Fişier de script (Automatic Translation)
