--- a/dynamic-data-mapping-web/src/main/resources/content/Language_sk.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_sk.properties
@@ -33,6 +33,7 @@ new-structure=Nová štruktúra
 only-allow-deleting-required-fields-in-edit-mode=Povoliť mazanie povinných polí iba v režime úprav.
 parent-x=Rodič {0}
 please-enter-a-valid-script=Zadajte, prosím, platný skript.
+please-enter-only-alphanumeric-characters-or-underscore=Prosím, zadajte iba alfanumerické znaky alebo znak podčiarknutia. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Zadajte, prosím, jedinečné názvy polí štruktúry (vrátane názvov polí zdedených od rodičovskej štruktúry).
 save-and-continue=Uložiť a pokračovať
 script-file=Skriptový súbor
