--- a/dynamic-data-mapping-web/src/main/resources/content/Language_sl.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_sl.properties
@@ -33,6 +33,7 @@ new-structure=Dodaj strukturo
 only-allow-deleting-required-fields-in-edit-mode=Le dopušča brisanja zahtevana polja v načinu urejanja. (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Vnesite pravilen naslov.
+please-enter-only-alphanumeric-characters-or-underscore=Prosimo, vnesite samo alfanumerične znake in podčrtaj. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Vnesite edinstveno strukturo imena polj (vključno z imena polj, ki so podedovali od staršev strukturo). (Automatic Translation)
 save-and-continue=Shrani in nadaljuj
 script-file=Skript datoteke (Automatic Translation)
