--- a/dynamic-data-mapping-web/src/main/resources/content/Language_th.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_th.properties
@@ -33,6 +33,7 @@ new-structure=โครงสร้างใหม่ (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=อนุญาตให้เฉพาะ การลบเขตข้อมูลที่จำเป็นในโหมดแก้ไข (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=โปรดป้อนสคริปต์ถูกต้อง (Automatic Translation)
+please-enter-only-alphanumeric-characters-or-underscore=โปรดป้อนอักขระตัวอักษรหรือขีดล่างเท่านั้น (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=กรุณาใส่ชื่อเขตข้อมูลแตกต่างกัน (รวมถึงชื่อเขตข้อมูลที่รับมาจากโครงสร้างหลัก) (Automatic Translation)
 save-and-continue=บันทึก และดำเนินการต่อไป (Automatic Translation)
 script-file=แฟ้มสคริปต์ (Automatic Translation)
