--- a/dynamic-data-mapping-web/src/main/resources/content/Language_tr.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_tr.properties
@@ -33,6 +33,7 @@ new-structure=Yapı Ekle
 only-allow-deleting-required-fields-in-edit-mode=Yalnızca düzenleme modunda gerekli alanları silmek izin verin. (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Lütfen geçerli bir sokak giriniz.
+please-enter-only-alphanumeric-characters-or-underscore=Yalnızca alfasayısal karakterler veya alt çizgi giriniz. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Lütfen benzersiz bir yapı alan adları (üst yapısından miras alan adları da dahil olmak üzere) girin. (Automatic Translation)
 save-and-continue=Kaydet ve Devam Et
 script-file=Komut dosyası (Automatic Translation)
