--- a/dynamic-data-mapping-web/src/main/resources/content/Language_zh_CN.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_zh_CN.properties
@@ -33,6 +33,7 @@ new-structure=新的结构
 only-allow-deleting-required-fields-in-edit-mode=只准许在编辑模式下删除字段。
 parent-x=上级{0}
 please-enter-a-valid-script=请输入有效的脚本。
+please-enter-only-alphanumeric-characters-or-underscore=请只输入字母数字字符或下划线。 (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=请输入唯一的结构的字段名（包含从上级结构中继承来的字段名）。
 save-and-continue=保存并继续
 script-file=脚本文件
