--- a/dynamic-data-mapping-web/src/main/resources/content/Language_da.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_da.properties
@@ -33,6 +33,7 @@ new-structure=Ny Structure
 only-allow-deleting-required-fields-in-edit-mode=Only allow deleting required fields in edit mode. (Automatic Copy)
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Please enter a valid XML url.
+please-enter-only-alphanumeric-characters-or-underscore=Please enter only alphanumeric characters or underscore. (Automatic Copy)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Please enter unique structure field names (including field names inherited from the parent structure). (Automatic Copy)
 save-and-continue=Gem og fortsæt
 script-file=Script File (Automatic Copy)
