--- a/dynamic-data-mapping-web/src/main/resources/content/Language_de.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_de.properties
@@ -33,6 +33,7 @@ new-structure=Neue Struktur
 only-allow-deleting-required-fields-in-edit-mode=Das Löschen von Pflichtfeldern ist nur im Bearbeitungsmodus erlaubt.
 parent-x=Übergeordnete(r) {0}
 please-enter-a-valid-script=Bitte geben Sie ein gültiges Script an.
+please-enter-only-alphanumeric-characters-or-underscore=Please enter only alphanumeric characters or underscore. (Automatic Copy)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Bitte geben Sie eindeutige Feldnamen für die Struktur an.
 save-and-continue=Speichern und fortfahren
 script-file=Scriptdatei
