--- a/dynamic-data-mapping-web/src/main/resources/content/Language_es.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_es.properties
@@ -33,6 +33,7 @@ new-structure=Nueva estructura
 only-allow-deleting-required-fields-in-edit-mode=Sólo está permitido el borrado de campos requeridos en modo edición.
 parent-x=Padre {0}
 please-enter-a-valid-script=Por favor, introduzca una calle válida.
+please-enter-only-alphanumeric-characters-or-underscore=Introduce sólo caracteres alfanuméricos o subrayado. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Por favor, introduzca nombres de campos de estructura únicos (incluyendo los los nombres heredados de la estructura padre).
 save-and-continue=Guardar y continuar
 script-file=Archivo de script
