--- a/dynamic-data-mapping-web/src/main/resources/content/Language_et.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_et.properties
@@ -33,6 +33,7 @@ new-structure=Lisa struktuur
 only-allow-deleting-required-fields-in-edit-mode=Luba ainult kustutada välju redigeerimisrežiimist. (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Sisesta korrektne tänav.
+please-enter-only-alphanumeric-characters-or-underscore=Palun sisestage ainult tähti ja numbreid või alakriips. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Sisestage unikaalne struktuur väljanimed (sealhulgas väljanimed päritud ema struktuur). (Automatic Translation)
 save-and-continue=Salvesta ja jätka
 script-file=Skriptifaili (Automatic Translation)
