--- a/dynamic-data-mapping-web/src/main/resources/content/Language_hu.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_hu.properties
@@ -33,6 +33,7 @@ new-structure=Új struktúra
 only-allow-deleting-required-fields-in-edit-mode=Csak a szükséges mezők törlésének engedélyezése szerkesztés üzemmódban.
 parent-x=Szülő {0}
 please-enter-a-valid-script=Érvényes szkript szükséges.
+please-enter-only-alphanumeric-characters-or-underscore=Kérjük, adja meg, csak alfanumerikus karakter vagy aláhúzásjel. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Egyedi struktúramező-neveket kell beírni (a szülőstruktúrából örökölt mezőneveket is beleértve).
 save-and-continue=Mentés és folytatás
 script-file=Szkript fájl
