--- a/dynamic-data-mapping-web/src/main/resources/content/Language_in.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_in.properties
@@ -33,6 +33,7 @@ new-structure=Struktur Baru
 only-allow-deleting-required-fields-in-edit-mode=Hanya memungkinkan menghapus bidang yang diperlukan dalam mode edit.
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Silakan masukkan sebuah jalan yang berlaku
+please-enter-only-alphanumeric-characters-or-underscore=Masukkan hanya huruf atau underscore. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Silakan masukkan nama field struktur yang unik (termasuk nama field diwarisi dari struktur induk).
 save-and-continue=Simpan dan Lanjutkan
 script-file=Script File (Automatic Translation)
