--- a/dynamic-data-mapping-web/src/main/resources/content/Language_it.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_it.properties
@@ -33,6 +33,7 @@ new-structure=Nuova Struttura
 only-allow-deleting-required-fields-in-edit-mode=Consenti solo la cancellazione dei campi in modalità modifica.
 parent-x=Padre {0}
 please-enter-a-valid-script=Inserisci uno script valido.
+please-enter-only-alphanumeric-characters-or-underscore=Si prega di inserire solo caratteri alfanumerici o underscore. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Inserisci nomi di campi struttura univoci (includendo nomi campi ereditati dalla struttura padre).
 save-and-continue=Salva e continua
 script-file=File Script
