--- a/dynamic-data-mapping-web/src/main/resources/content/Language_ko.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_ko.properties
@@ -33,6 +33,7 @@ new-structure=구조를 추가하십시요
 only-allow-deleting-required-fields-in-edit-mode=편집 모드에서 필수 필드 삭제 수 있습니다. (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=제발 유효한 가두를 들어가십시요.
+please-enter-only-alphanumeric-characters-or-underscore=영숫자 문자 또는 밑줄을 입력 하십시오. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=독특한 구조 필드 이름 (부모 구조에서 상속 된 필드 이름 포함)를 입력 하십시오. (Automatic Translation)
 save-and-continue=를 제외하고 계속하거든
 script-file=스크립트 파일 (Automatic Translation)
