--- a/dynamic-data-mapping-web/src/main/resources/content/Language_nl_BE.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_nl_BE.properties
@@ -33,6 +33,7 @@ new-structure=Nieuwe structuur
 only-allow-deleting-required-fields-in-edit-mode=Verwijderen van velden alleen toestaan in bewerkmodus.
 parent-x=Bovenliggend {0}
 please-enter-a-valid-script=Voer een geldige straat in.
+please-enter-only-alphanumeric-characters-or-underscore=Please enter only alphanumeric characters or underscore. (Automatic Copy)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Voer unieke namen in voor de velden van de structuur (incl. namen van velden van de bovenliggende structuur).
 save-and-continue=Opslaan en verder gaan
 script-file=Scriptbestand (Automatic Translation)
