--- a/dynamic-data-mapping-web/src/main/resources/content/Language_pl.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_pl.properties
@@ -33,6 +33,7 @@ new-structure=Nowa struktura
 only-allow-deleting-required-fields-in-edit-mode=Pozwala na usunięcie tylko wybranych pól w trybie edycji.
 parent-x=Nadrzędny {0}
 please-enter-a-valid-script=Wprowadź prawidłowy skrypt.
+please-enter-only-alphanumeric-characters-or-underscore=Proszę wpisać tylko znaków alfanumerycznych lub podkreślenia. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Wprowadź unikalne nazwy pola w strukturze (w tym nazwy odziedziczone ze struktury nadrzędnej).
 save-and-continue=Zapisz i kontynuuj
 script-file=Plik skryptu
