--- a/dynamic-data-mapping-web/src/main/resources/content/Language_pt_PT.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_pt_PT.properties
@@ -33,6 +33,7 @@ new-structure=Nova estrutura
 only-allow-deleting-required-fields-in-edit-mode=Permitir apagar os campos obrigatórios apenas no modo de edição.
 parent-x=Pai {0}
 please-enter-a-valid-script=Por favor, insira um script válido.
+please-enter-only-alphanumeric-characters-or-underscore=Por favor digite apenas caracteres alfanuméricos ou sublinhado. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Por favor, insira nomes únicos para os campos da estrutura (incluindo nomes dos campos herdados da estrutura pai).
 save-and-continue=Salvar e Continuar
 script-file=Script
