--- a/dynamic-data-mapping-web/src/main/resources/content/Language_ru.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_ru.properties
@@ -33,6 +33,7 @@ new-structure=Новая структура
 only-allow-deleting-required-fields-in-edit-mode=Разрешить удаление обязательных полей только в режиме редактирования.
 parent-x=Родитель {0}
 please-enter-a-valid-script=Пожалуйста, введите правильный скрипт.
+please-enter-only-alphanumeric-characters-or-underscore=Пожалуйста, введите только буквы или символа подчеркивания. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Пожалуйста, введите уникальные имена полей структуры (включая имена полей из родительской структуры).
 save-and-continue=Сохранить и продолжить
 script-file=Файл скрипта
