--- a/dynamic-data-mapping-web/src/main/resources/content/Language_sr_RS.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_sr_RS.properties
@@ -33,6 +33,7 @@ new-structure=Нова Структура
 only-allow-deleting-required-fields-in-edit-mode=Само је дозвољено брисање обавезна поља у режиму уређивања.
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Молимо Вас да унесете исправну скрипту.
+please-enter-only-alphanumeric-characters-or-underscore=Please enter only alphanumeric characters or underscore. (Automatic Copy)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Молимо Вас да унесете јединствена имена поља структуре (укључујући и имена поља наслеђена од структуре претка)
 save-and-continue=Сачувај и Настави
 script-file=Script File (Automatic Copy)
