--- a/dynamic-data-mapping-web/src/main/resources/content/Language_sv.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_sv.properties
@@ -33,6 +33,7 @@ new-structure=Lägga till struktur
 only-allow-deleting-required-fields-in-edit-mode=Tillåt endast radering av obligatoriska fält i redigeringsläge.
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Var vänlig och skriv in en giltig gata.
+please-enter-only-alphanumeric-characters-or-underscore=Please enter only alphanumeric characters or underscore. (Automatic Copy)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Please enter unique structure field names (including field names inherited from the parent structure). (Automatic Copy)
 save-and-continue=Spara och fortsätt redigera
 script-file=Script File (Automatic Copy)
