--- a/dynamic-data-mapping-web/src/main/resources/content/Language_uk.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_uk.properties
@@ -33,6 +33,7 @@ new-structure=Добавити структуру
 only-allow-deleting-required-fields-in-edit-mode=Дозволити лише видаливши обов'язкові поля в режимі редагування. (Automatic Translation)
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Будь ласка правильно введіть вулицю.
+please-enter-only-alphanumeric-characters-or-underscore=Будь ласка, введіть тільки алфавітно-цифрові символи або підкреслення. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Будь ласка, введіть імена полів унікальну структуру (включаючи імена полів, успадковані від батьківської структури). (Automatic Translation)
 save-and-continue=Зберегти та продовжити
 script-file=Файл сценарію (Automatic Translation)
