--- a/dynamic-data-mapping-web/src/main/resources/content/Language_vi.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_vi.properties
@@ -33,6 +33,7 @@ new-structure=Cấu trúc mới
 only-allow-deleting-required-fields-in-edit-mode=Chỉ cho phép xóa trường bắt buộc ở chế độ cập nhật.
 parent-x=Phía trên {0}
 please-enter-a-valid-script=Vui lòng nhập script hợp lệ.
+please-enter-only-alphanumeric-characters-or-underscore=Vui lòng nhập chỉ có ký tự hoặc gạch dưới. (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Vui lòng nhập vào các tên thuộc tính trong cấu trúc duy nhất (loại trừ cả tên những thuộc tính được kế thừa từ cấu trúc cha).
 save-and-continue=Lưu và tiếp tục
 script-file=Tập tin script
