--- a/dynamic-data-mapping-web/src/main/resources/content/Language_zh_TW.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_zh_TW.properties
@@ -33,6 +33,7 @@ new-structure=新增結構
 only-allow-deleting-required-fields-in-edit-mode=只允許在編輯模式刪除必須的欄位。
 parent-x=上層 {0}
 please-enter-a-valid-script=請輸入一個正確的Script。
+please-enter-only-alphanumeric-characters-or-underscore=請只輸入字母數位字元或底線。 (Automatic Translation)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=請輸入唯一結構欄位名稱(包含繼承字上層結構之欄位名稱)。
 save-and-continue=儲存並繼續
 script-file=Script 檔案
